infrastructure/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: "kdb.192-168-10-42.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress-external
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
  - host: "kdb.dev.jpto.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
  tls:
  - hosts: 
    - kdb.dev.jpto.dev
    secretName: kubernetes-dashboard-jptodev-tls-production
